fix: center align names of commitees on countdown

--- a/src/app/applications/[periodName]/countdown/CommitteeLogoRoll.module.scss
+++ b/src/app/applications/[periodName]/countdown/CommitteeLogoRoll.module.scss
@@ -16,6 +16,7 @@
     span {
         color: ohma.$colors-gray-200;
         font-size: 15rem;
+        text-align: center;
     }
 
     h1 {
